--- a/VandyMobile/MyVMViewController.xib
+++ b/VandyMobile/MyVMViewController.xib
@@ -55,16 +55,17 @@
 					<object class="IBUIButton" id="366377339">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{54, 132}, {212, 104}}</string>
+						<string key="NSFrame">{{90, 150}, {141, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">Log in to VandyMobile</string>
+						<string key="IBUINormalTitle">Log in to myVM</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="67732506">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -450,8 +451,8 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="906725394"/>
 							<reference ref="366377339"/>
+							<reference ref="906725394"/>
 							<reference ref="567928726"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -516,11 +517,6 @@
 						<reference key="parent" ref="906725394"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">34</int>
-						<reference key="object" ref="366377339"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
 						<reference key="object" ref="567928726"/>
 						<reference key="parent" ref="191373211"/>
@@ -534,6 +530,11 @@
 						<int key="objectID">17</int>
 						<reference key="object" ref="409957715"/>
 						<reference key="parent" ref="906725394"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">34</int>
+						<reference key="object" ref="366377339"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
 			</object>
