--- a/VandyMobile/MyVMViewController.xib
+++ b/VandyMobile/MyVMViewController.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 367}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="366377339"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -56,6 +57,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{37, 150}, {247, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -94,6 +96,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 59}, {320, 102}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="715970994"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -116,6 +119,7 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{1, 1}, {65, 65}}</string>
 												<reference key="NSSuperview" ref="33855933"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="363668177"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -128,6 +132,7 @@
 										</array>
 										<string key="NSFrame">{{2, 2}, {66, 66}}</string>
 										<reference key="NSSuperview" ref="715970994"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="913953477"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="988749328">
@@ -139,6 +144,7 @@
 								</array>
 								<string key="NSFrame">{{20, 70}, {70, 70}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="33855933"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="988749328"/>
@@ -149,6 +155,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 82}, {202, 25}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="643461006"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -185,6 +192,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 111}, {202, 22}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="89386331"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -216,6 +224,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{28, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="268319198"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -240,6 +249,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{62, 367}, {46, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="409957715"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -263,6 +273,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{177, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="992010058"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -287,6 +298,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{198, 367}, {72, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567928726"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -310,6 +322,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{103, 168}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="931826467"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -334,6 +347,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{129, 248}, {65, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1033075535"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -355,6 +369,7 @@
 						</array>
 						<string key="NSFrame">{{0, -59}, {320, 485}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1069856795"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="988749328"/>
@@ -363,6 +378,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="906725394"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -470,6 +486,15 @@
 						<reference key="destination" ref="1033075535"/>
 					</object>
 					<int key="connectionID">58</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">devTeamButtonPressed</string>
+						<reference key="source" ref="409957715"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">59</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -625,9 +650,74 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">58</int>
+			<int key="maxID">59</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MyVMViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="appNameLabel">UILabel</string>
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="commitsButton">UIButton</string>
+						<string key="emailLabel">UILabel</string>
+						<string key="loggedInView">UIView</string>
+						<string key="loginButton">UIButton</string>
+						<string key="profileImageView">UIImageView</string>
+						<string key="profilePictureBorderContainerView">UIView</string>
+						<string key="profilePictureContainerView">UIView</string>
+						<string key="teamButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="appNameLabel">
+							<string key="name">appNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="commitsButton">
+							<string key="name">commitsButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="emailLabel">
+							<string key="name">emailLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loggedInView">
+							<string key="name">loggedInView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loginButton">
+							<string key="name">loginButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="profileImageView">
+							<string key="name">profileImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="profilePictureBorderContainerView">
+							<string key="name">profilePictureBorderContainerView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="profilePictureContainerView">
+							<string key="name">profilePictureContainerView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="teamButton">
+							<string key="name">teamButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MyVMViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
